--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react-native": "^0.59.9",
     "react-native-vector-icons": "^6.5.0"
   },
+  "peerDependencies": {
+    "react": "^16.8.6",
+    "react-native": "^0.59.9"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "babel-eslint": "^10.0.1",
