--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@miidx/rn-floating-button",
-  "version": "1.0.1",
+  "version": "1.0.3",
   "description": "Simple floating button for React Native",
   "main": "index.js",
   "scripts": {
@@ -17,12 +17,13 @@
   },
   "homepage": "https://github.com/miidx/rn-simple-floating-button#readme",
   "dependencies": {
-    "prop-types": "^15.7.2",
-    "react-native-vector-icons": "^6.5.0"
+    
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "prop-types": "^15.7.2",
+    "react-native-vector-icons": "^6.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
